--- a/views/edit_board.ejs
+++ b/views/edit_board.ejs
@@ -78,7 +78,7 @@
       </div>
       <div class="profile-details">
         <% if (user) { %>
-          <img src="../images/chef.png" alt="">
+          <img src="../images/<%= user.profile_picture %>" alt="">
           <span class="admin_name">
             <%= user.username %>
           </span>
@@ -104,7 +104,7 @@
       </div>
       <div class="profile-details">
         <% if (user) { %>
-          <img src="../images/chef.png" alt="">
+          <img src="../images/<%= user.profile_picture %>" alt="">
           <span class="admin_name">
             <%= user.username %>
           </span>
@@ -129,13 +129,13 @@
                     <div class="post-form">
                       <div class="post-header">
                       <div class="post-content">
-                        <input type="text" ip="topic"name="topic" style="font-size: 20px;" placeholder="หัวข้อกระทู้" required>
+                        <input type="text" ip="topic"name="topic" style="font-size: 20px;" placeholder="<%= post.topic %>" value="<%= post.topic %>">
                         <br>
-                        <textarea id="details" name="details" style="font-size: 15px;" placeholder="เนื้อหากระทู้"required></textarea>
+                        <textarea id="details" name="details" style="font-size: 15px;" placeholder="เนื้อหากระทู้"></textarea>
                         <br>
-                        <input type="hidden" name="post_id" value="<%= post %>">
+                        <input type="hidden" name="post_id" value="<%= post.id %>">
                         <label for="post-image">รูปภาพ:</label>
-                        <input type="file"name="post_pic" accept="image/*">
+                        <input type="file" name="post_pic" accept="image/*">
                         <span>
                           <button class="post-button" type="submit">โพสต์</button>
                           <button class="cancel-button" type="submit" formmethod="get" formaction="/">ยกเลิก</button>
