--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -43,13 +43,19 @@
             <span class="links_name"></c> โปรไฟล์</span>
           </a>
       </li>
-      <% if (user && user.isAdmin == 'Y') { %>
       <li>
-        <a href="/adminBKB" class="active">
-          <i class="bi bi-info-circle"></i>
-          <span class="links_name"></c> Dashboard</span>
+        <a href="/all_member">
+          <i class="bi bi-people-fill"></i>
+          <span class="links_name"></c> สมาชิก</span>
         </a>
-      </li>
+    </li>
+    <% if (user && user.isAdmin == 'Y') { %>
+    <li>
+      <a href="/adminBKB" class="active">
+        <i class="bi bi-info-circle"></i>
+        <span class="links_name"></c> Dashboard</span>
+      </a>
+    </li>
       <% } %>
       <% if (user) { %>
       <li class="log_out">
@@ -68,10 +74,11 @@
         <i class='bx bx-menu sidebarBtn'></i>
         <span class="dashboard">Dashboard</span>
       </div>
-      <div class="search-box">
-        <input type="text" placeholder="Search...">
-        <i class='bx bx-search'></i>
-      </div>
+      <form method="get" class="search-box">
+        <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
+        <button id="search_result">
+        </button>
+      </form>
       <div class="profile-details">
         <% if (user) { %>
           <img src="../images/<%= user.profile_picture %>" alt="">
@@ -169,7 +176,7 @@
         sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
     }
   </script>
-
+<script src="../js/search.js"></script>
 </body>
 
 </html>
