--- a/views/edit_profile.ejs
+++ b/views/edit_profile.ejs
@@ -42,6 +42,12 @@
           <span class="links_name"></c> โปรไฟล์</span>
         </a>
       </li>
+      <li>
+        <a href="/all_member" class="active">
+          <i class="bi bi-people-fill"></i>
+          <span class="links_name"></c> สมาชิก</span>
+        </a>
+      </li>
       <li class="log_out">
         <a href="/logout">
           <i class='bx bx-log-out'></i>
@@ -57,10 +63,11 @@
         <i class='bx bx-menu sidebarBtn'></i>
         <span class="dashboard">Board</span>
       </div>
-      <div class="search-box">
-        <input type="text" placeholder="Search...">
-        <i class='bx bx-search'></i>
-      </div>
+      <form method="get" class="search-box">
+        <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
+        <button id="search_result">
+        </button>
+      </form>
       <div class="profile-details">
         <% if (user) { %>
           <img src="../images/<%= user.profile_picture %>" alt="">
@@ -240,7 +247,7 @@
           sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       }
     </script>
-
+<script src="../js/search.js"></script>
 </body>
 
 </html>
