--- a/views/edit_user.ejs
+++ b/views/edit_user.ejs
@@ -42,7 +42,13 @@
                 <span class="links_name"></c> โปรไฟล์</span>
               </a>
           </li>
-          <% if (session && session.isAdmin == 'Y') { %>
+          <li>
+            <a href="/all_member">
+              <i class="bi bi-people-fill"></i>
+              <span class="links_name"></c> สมาชิก</span>
+            </a>
+        </li>
+          <% if (user && user.isAdmin == 'Y') { %>
           <li>
             <a href="/adminBKB" class="active">
               <i class="bi bi-info-circle"></i>
@@ -67,10 +73,11 @@
             <i class='bx bx-menu sidebarBtn'></i>
             <span class="dashboard">Board</span>
           </div>
-          <div class="search-box">
-            <input type="text" placeholder="Search...">
-            <i class='bx bx-search'></i>
-          </div>
+          <form method="get" class="search-box">
+            <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
+            <button id="search_result">
+            </button>
+          </form>
           <div class="profile-details">
             <% if (session) { %>
               <img src="../images/<%= user.profile_picture %>" alt="">
@@ -244,7 +251,7 @@
           sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       }
     </script>
-
+<script src="../js/search.js"></script>
 </body>
 
 </html>
