--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
     </div>
     <ul class="nav-links">
       <li>
-        <a href="/" class="active">
+        <a href="/">
           <i class="bi bi-house"></i>
           <span class="links_name"></c> หน้าหลัก</span>
         </a>
@@ -47,9 +47,15 @@
             <span class="links_name"></c> โปรไฟล์</span>
           </a>
       </li>
+      <li>
+        <a href="/all_member">
+          <i class="bi bi-people-fill"></i>
+          <span class="links_name"></c> สมาชิก</span>
+        </a>
+    </li>
       <% if (user && user.isAdmin == 'Y') { %>
       <li>
-        <a href="/adminBKB">
+        <a href="/adminBKB" class="active">
           <i class="bi bi-info-circle"></i>
           <span class="links_name"></c> Dashboard</span>
         </a>
@@ -72,10 +78,11 @@
         <i class='bx bx-menu sidebarBtn'></i>
         <span class="dashboard">Board</span>
       </div>
-      <div class="search-box">
-        <input type="text" placeholder="Search...">
-        <i class='bx bx-search'></i>
-      </div>
+      <form method="get" class="search-box">
+        <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
+        <button id="search_result">
+        </button>
+      </form>
       <div class="profile-details">
         <% if (user) { %>
           <img src="../images/<%= user.profile_picture %>" alt="">
@@ -131,6 +138,7 @@
         sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
     }
   </script>
+  <script src="../js/search.js"></script>
 </body>
 
 </html>
