Fix formatting issues and update database queries

--- a/views/all_member.ejs
+++ b/views/all_member.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+<!-- Coding by CodingNepal | www.codingnepalweb.com -->
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="UTF-8">
-  <title> WebBoard </title>
-  <link rel="stylesheet" href="../css/myboard_style.css">
-  <!-- CDN -->
+  <title> Member </title>
+  <link rel="stylesheet" href="../css/admin_style.css">
+  <!-- Boxicons CDN Link -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -32,18 +33,18 @@
         </a>
       </li>
       <li>
-        <a href="/my_board" class="active">
+        <a href="/my_board">
           <i class="bi bi-archive"></i>
           <span class="links_name"></c> กระทู้ของฉัน</span>
         </a>
         <li>
-          <a href="/all_member">
+          <a href="/profile">
             <i class="bi bi-person-circle"></i>
             <span class="links_name"></c> โปรไฟล์</span>
           </a>
       </li>
       <li>
-        <a href="/profile">
+        <a href="/all_member" class="active">
           <i class="bi bi-people-fill"></i>
           <span class="links_name"></c> สมาชิก</span>
         </a>
@@ -71,7 +72,7 @@
     <nav>
       <div class="sidebar-button">
         <i class='bx bx-menu sidebarBtn'></i>
-        <span class="dashboard">Board</span>
+        <span class="dashboard">Dashboard</span>
       </div>
       <p method="get" class="search-box">
         <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
@@ -97,45 +98,39 @@
     <div class="home-content">
       <div class="lish-boxes">
         <div class="recent-lish box">
-          <div class="title">
-            <h1>My Board</h1>
-          </div>
+          <div class="title">สมาชิก</div>
           <div class="lish-details">
             <div class="header_wrap">
             </div>
-            <div class="my-board-date"></div>
-            <ul>
-              <table>
-                <thead>
-                  <tr>
-                    <th>Topic</th>
-                    <th>Action</th>
-                  </tr>
-                  <% for (const post of Posts) { %>
-                    <% if (post.Users_uid === user.uid) { %>
-                      <% console.log(post) %>
-                      <tbody>
-                        <td>
-                          <p><%= post.topic %></p>
-                        </td>
-                        <td>
-                          <form action="/edit_post_view" method="post">
-                            <input type="hidden" name="post_id" value="<%= post.id %>">
-                            <input type="hidden" name="post_Users_uid" value="<%= post.Users_uid %>">
-                            <div>
-                              <button class="edit-button" type="submit">Edit</button>
-                              <button class="remove-button" type="submit" formaction="/delete_post">Remove</button>
-                            </div>
-                          </form>
-                        </td>
-                      </tbody>
-                    <% } %>
-                  <% } %>
-              </table>
-            </ul>
+            <table class="table table-striped table-class" id="table-id">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Profile</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% for (const user of users) { %>
+                <tr>
+                  <td><%= user.uid %></td>
+                  <td>
+                    <img src="../images/<%= user.profile_picture %>" alt="ผู้ใช้งาน">
+                  </td>
+                  <td> <%= user.username %></td>
+                  <td> <%= user.email %></td>
+                  <td>
+                  </td>
+                </tr>
+                <% } %>
+
+              <tbody>
+            </table>
           </div>
         </div>
       </div>
+    </div>
   </section>
 
   <script>
