--- a/views/edit_profile.ejs
+++ b/views/edit_profile.ejs
@@ -42,12 +42,34 @@
           <span class="links_name"></c> โปรไฟล์</span>
         </a>
       </li>
-      <li class="log_out">
-        <a href="/logout">
-          <i class='bx bx-log-out'></i>
-          <span class="links_name">Log out</span>
+      <li>
+        <a href="/all_member">
+          <i class="bi bi-people-fill"></i>
+          <span class="links_name"></c> สมาชิก</span>
         </a>
       </li>
+      <% if (user && user.isAdmin=='Y' ) { %>
+        <li>
+          <a href="/adminBKB">
+            <i class="bi bi-info-circle"></i>
+            <span class="links_name"></c> Dashboard</span>
+          </a>
+        </li>
+        <% } %>
+          <% if (user) { %>
+            <li class="log_out">
+              <a href="/logout">
+                <i class='bx bx-log-out'></i>
+                <span class="links_name">Log out</span>
+              </a>
+            </li>
+            <% } %>
+              <li class="log_out">
+                <a href="/logout">
+                  <i class='bx bx-log-out'></i>
+                  <span class="links_name">Log out</span>
+                </a>
+              </li>
     </ul>
   </div>
 
@@ -57,10 +79,12 @@
         <i class='bx bx-menu sidebarBtn'></i>
         <span class="dashboard">Board</span>
       </div>
-      <div class="search-box">
-        <input type="text" placeholder="Search...">
-        <i class='bx bx-search'></i>
-      </div>
+      <p method="get" class="search-box">
+        <input type="text" name="search" id="autocomplete_search" class="bi bi-search"
+          placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
+        <button id="search_result">
+        </button>
+      </p>
       <div class="profile-details">
         <% if (user) { %>
           <img src="../images/<%= user.profile_picture %>" alt="">
@@ -76,6 +100,7 @@
             <% } %>
       </div>
     </nav>
+
     <section class="home-section">
       <div class="home-content">
         <div class="lish-boxes">
@@ -83,7 +108,8 @@
             <% if (user) { %>
               <div class="col-12 col-sm-auto mb-3">
                 <div class="mx-auto" style="width: 160px;">
-                  <img src="../images/<%= user.profile_picture %>" width="150" height="150" class="rounded-circle" alt="">
+                  <img src="../images/<%= user.profile_picture %>" width="150" height="150" class="rounded-circle"
+                    alt="">
                   <br>
                 </div>
               </div>
@@ -96,23 +122,24 @@
                     <div class="tab-pane active">
                       <div class="mt-2">
                         <form action="/update_profile" method="post" enctype="multipart/form-data">
-                          <input type="file" name="profile_picture" id="file" accept="image/*"/>
+                          <input type="file" name="profile_picture" id="file" accept="image/*" />
                           <input type="hidden" name="uid" value="<%= user.uid %>">
                           <input type="hidden" name="username" value="<%= user.username %>">
                           <input type="hidden" name="email" value="<%= user.email %>">
                           <input type="hidden" name="display_name" value="<%= user.display_name %>">
                           <br>
                           <button type="submit" class="btn btn-primary edit-profile">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-camera" viewBox="0 0 16 16">
-                            <path
-                              d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4z" />
-                            <path
-                              d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5m0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0" />
-                          </svg>
-                          <span>Change Photo</span>
-                        </button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                              class="bi bi-camera" viewBox="0 0 16 16">
+                              <path
+                                d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4z" />
+                              <path
+                                d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5m0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0" />
+                            </svg>
+                            <span>Change Photo</span>
+                          </button>
                       </div>
-                    </form>
+                      </form>
                       <br>
                       <div class="tab-content pt-3">
                         <div class="tab-pane active">
@@ -151,8 +178,8 @@
                                       <br>
                                       <input type="hidden" name="uid" value="<%= user.uid %>">
                                       <input type="hidden" name="profile_picture" value="<%= user.profile_picture %>">
-                                      <button button class="btn btn-primary edit-profile"
-                                        type="submit">Save Changes</button>
+                                      <button button class="btn btn-primary edit-profile" type="submit">Save
+                                        Changes</button>
                                     </div>
                                   </div>
                                 </div>
@@ -189,9 +216,9 @@
                                 <div class="col">
                                   <div class="form-group">
                                     <br>
-                                    <button button class="btn btn-primary edit-profile"
-                                      type="submit">Save Changes</button>
-                                      <% } %>
+                                    <button button class="btn btn-primary edit-profile" type="submit">Save
+                                      Changes</button>
+                                    <% } %>
                                   </div>
                                 </div>
                               </div>
@@ -199,19 +226,19 @@
                                 <div class="col">
                                   <div class="form-group">
                                     <br>
-                                      <% if(messages.length> 0 && messages.length < 2 ) { %>
-                                      <div class="alert alert-danger" role="alert">
-                                        <% for(var i=0; i < messages.length; i++) { %>
-                                          <%= messages[i] %>
-                                            <% } %>
-                                      </div>
-                                      <% } else if (messages.length > 2) { %>
-                                        <div class="alert alert-success" role="alert">
-                                          <% for(var i=0; i < 1; i++) { %>
-                                            <%= "Login successfuly" %>
+                                    <% if(messages.length> 0 && messages.length < 2 ) { %>
+                                        <div class="alert alert-danger" role="alert">
+                                          <% for(var i=0; i < messages.length; i++) { %>
+                                            <%= messages[i] %>
                                               <% } %>
                                         </div>
-                                        <% } %>
+                                        <% } else if (messages.length> 2) { %>
+                                          <div class="alert alert-success" role="alert">
+                                            <% for(var i=0; i < 1; i++) { %>
+                                              <%= "Login successfuly" %>
+                                                <% } %>
+                                          </div>
+                                          <% } %>
                                   </div>
                                 </div>
                               </div>
@@ -220,27 +247,27 @@
                         </form>
                       </div>
                     </div>
-                    </div>
                   </div>
               </div>
           </div>
         </div>
       </div>
+      </div>
     </section>
-    </section>  
+  </section>
 
-    <script>
-      let sidebar = document.querySelector(".sidebar");
-      let sidebarBtn = document.querySelector(".sidebarBtn");
-      sidebarBtn.onclick = function () {
-        sidebar.classList.toggle("active");
-        if (sidebar.classList.contains("active")) {
-          sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
-        } else
-          sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
-      }
-    </script>
-
+  <script>
+    let sidebar = document.querySelector(".sidebar");
+    let sidebarBtn = document.querySelector(".sidebarBtn");
+    sidebarBtn.onclick = function () {
+      sidebar.classList.toggle("active");
+      if (sidebar.classList.contains("active")) {
+        sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+      } else
+        sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+    }
+  </script>
+  <script src="../js/search.js"></script>
 </body>
 
 </html>
