--- a/views/edit_user.ejs
+++ b/views/edit_user.ejs
@@ -42,22 +42,28 @@
                 <span class="links_name"></c> โปรไฟล์</span>
               </a>
           </li>
-          <% if (session && session.isAdmin == 'Y') { %>
           <li>
-            <a href="/adminBKB" class="active">
-              <i class="bi bi-info-circle"></i>
-              <span class="links_name"></c> Dashboard</span>
+            <a href="/all_member">
+              <i class="bi bi-people-fill"></i>
+              <span class="links_name"></c> สมาชิก</span>
             </a>
           </li>
-          <% } %>
-          <% if (session) { %>
-          <li class="log_out">
-            <a href="/logout">
-              <i class='bx bx-log-out'></i>
-              <span class="links_name">Log out</span>
-            </a>
-          </li>
-          <% } %>
+          <% if (session && session.isAdmin == 'Y') { %>
+            <li>
+              <a href="/adminBKB" class="active">
+                <i class="bi bi-info-circle"></i>
+                <span class="links_name"></c> Dashboard</span>
+              </a>
+            </li>
+            <% } %>
+            <% if (session) { %>
+            <li class="log_out">
+              <a href="/logout">
+                <i class='bx bx-log-out'></i>
+                <span class="links_name">Log out</span>
+              </a>
+            </li>
+            <% } %>
         </ul>
       </div>
     
@@ -67,10 +73,11 @@
             <i class='bx bx-menu sidebarBtn'></i>
             <span class="dashboard">Board</span>
           </div>
-          <div class="search-box">
-            <input type="text" placeholder="Search...">
-            <i class='bx bx-search'></i>
-          </div>
+          <p method="get" class="search-box">
+            <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
+            <button id="search_result">
+            </button>
+          </p>
           <div class="profile-details">
             <% if (session) { %>
               <img src="../images/<%= user.profile_picture %>" alt="">
@@ -86,6 +93,7 @@
                 <% } %>
           </div>
         </nav>
+        
     <section class="home-section">
       <div class="home-content">
         <div class="lish-boxes">
@@ -244,7 +252,7 @@
           sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       }
     </script>
-
+<script src="../js/search.js"></script>
 </body>
 
 </html>
