--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -43,6 +43,12 @@
           <span class="links_name"></c> โปรไฟล์</span>
         </a>
       </li>
+      <li>
+        <a href="/all_member">
+          <i class="bi bi-people-fill"></i>
+          <span class="links_name"></c> สมาชิก</span>
+        </a>
+    </li>
       <% if (user && user.isAdmin=='Y' ) { %>
         <li>
           <a href="/adminBKB">
@@ -68,10 +74,11 @@
         <i class='bx bx-menu sidebarBtn'></i>
         <span class="dashboard">Board</span>
       </div>
-      <div class="search-box">
-        <input type="text" placeholder="Search...">
-        <i class='bx bx-search'></i>
-      </div>
+      <p method="get" class="search-box">
+        <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
+        <button id="search_result">
+        </button>
+      </p>
       <div class="profile-details">
         <% if (user) { %>
           <img src="../images/<%= user.profile_picture %>" alt="">
@@ -139,7 +146,7 @@
         sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
     }
   </script>
-
+<script src="../js/search.js"></script>
 </body>
 
 </html>
