--- a/views/searchprofile.ejs
+++ b/views/searchprofile.ejs
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title> WebBoard </title>
-  <link rel="stylesheet" href="../css/myboard_style.css">
+  <link rel="stylesheet" href="Profile.css">
+  <link rel="stylesheet" href="../css/profile_style.css">
   <!-- CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -32,38 +33,38 @@
         </a>
       </li>
       <li>
-        <a href="/my_board" class="active">
+        <a href="/my_board">
           <i class="bi bi-archive"></i>
           <span class="links_name"></c> กระทู้ของฉัน</span>
         </a>
-        <li>
-          <a href="/all_member">
-            <i class="bi bi-person-circle"></i>
-            <span class="links_name"></c> โปรไฟล์</span>
-          </a>
+      <li>
+        <a href="/profile" class="active">
+          <i class="bi bi-person-circle"></i>
+          <span class="links_name"></c> โปรไฟล์</span>
+        </a>
       </li>
       <li>
-        <a href="/profile">
+        <a href="/all_member">
           <i class="bi bi-people-fill"></i>
           <span class="links_name"></c> สมาชิก</span>
         </a>
     </li>
-      <% if (user && user.isAdmin == 'Y') { %>
-      <li>
-        <a href="/adminBKB">
-          <i class="bi bi-info-circle"></i>
-          <span class="links_name"></c> Dashboard</span>
-        </a>
-      </li>
-      <% } %>
-      <% if (user) { %>
-      <li class="log_out">
-        <a href="/logout">
-          <i class='bx bx-log-out'></i>
-          <span class="links_name">Log out</span>
-        </a>
-      </li>
-      <% } %>
+      <% if (session && session.isAdmin=='Y' ) { %>
+        <li>
+          <a href="/adminBKB">
+            <i class="bi bi-info-circle"></i>
+            <span class="links_name"></c> Dashboard</span>
+          </a>
+        </li>
+        <% } %>
+          <% if (session) { %>
+            <li class="log_out">
+              <a href="/logout">
+                <i class='bx bx-log-out'></i>
+                <span class="links_name">Log out</span>
+              </a>
+            </li>
+            <% } %>
     </ul>
   </div>
 
@@ -77,12 +78,12 @@
         <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
         <button id="search_result">
         </button>
-      </p>
+    </p>
       <div class="profile-details">
-        <% if (user) { %>
-          <img src="../images/<%= user.profile_picture %>" alt="">
+        <% if (session) { %>
+          <img src="../images/<%= session.profile_picture %>" alt="">
           <span class="admin_name">
-            <%= user.username %>
+            <%= session.username %>
           </span>
           <!-- <a href="/logout">ออกจากระบบ</a> -->
           <% } else { %>
@@ -94,49 +95,44 @@
       </div>
     </nav>
 
-    <div class="home-content">
-      <div class="lish-boxes">
-        <div class="recent-lish box">
-          <div class="title">
-            <h1>My Board</h1>
-          </div>
-          <div class="lish-details">
-            <div class="header_wrap">
+
+    <% if (user) { %>
+      <div class="home-content">
+        <div class="lish-boxes">
+          <div class="recent-lish box">
+            <div class="container">
+              <div class="row align-items-center flex-row-reverse">
+                <div class="col-lg-6">
+                  <div class="about-text go-to">
+                    <h3 class="dark-color">About Me</h3>
+                    <h6 class="theme-color lead">Display Name : <%= user.display_name %>
+                    </h6>
+                    <h6 class="theme-color lead">Email : <%= user.email %>
+                    </h6>
+                    <div class="row about-list">
+                      <div class="col-md-6">
+                        <div class="media">
+                          <br>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="about-avatar">
+                    <img src="../images/<%= user.profile_picture %>" title="" alt="">
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="my-board-date"></div>
-            <ul>
-              <table>
-                <thead>
-                  <tr>
-                    <th>Topic</th>
-                    <th>Action</th>
-                  </tr>
-                  <% for (const post of Posts) { %>
-                    <% if (post.Users_uid === user.uid) { %>
-                      <% console.log(post) %>
-                      <tbody>
-                        <td>
-                          <p><%= post.topic %></p>
-                        </td>
-                        <td>
-                          <form action="/edit_post_view" method="post">
-                            <input type="hidden" name="post_id" value="<%= post.id %>">
-                            <input type="hidden" name="post_Users_uid" value="<%= post.Users_uid %>">
-                            <div>
-                              <button class="edit-button" type="submit">Edit</button>
-                              <button class="remove-button" type="submit" formaction="/delete_post">Remove</button>
-                            </div>
-                          </form>
-                        </td>
-                      </tbody>
-                    <% } %>
-                  <% } %>
-              </table>
-            </ul>
           </div>
         </div>
       </div>
+      <% } %>
+
+        </div>
   </section>
+
 
   <script>
     let sidebar = document.querySelector(".sidebar");
