--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,11 +78,11 @@
         <i class='bx bx-menu sidebarBtn'></i>
         <span class="dashboard">Board</span>
       </div>
-      <form method="get" class="search-box">
+      <p method="get" class="search-box">
         <input type="text" name="search" id="autocomplete_search" class="bi bi-search" placeholder="พิมพ์หัวข้อที่ต้องการค้นหา">
         <button id="search_result">
         </button>
-      </form>
+      </p>
       <div class="profile-details">
         <% if (user) { %>
           <img src="../images/<%= user.profile_picture %>" alt="">
