--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -98,7 +98,7 @@
     <div class="home-content">
       <div class="lish-boxes">
         <div class="recent-lish box">
-          <div class="title">User Management</div>
+          <div class="title"><a href="/adminBKB">User Management</a> <a href="/admin_board">Board Management<a></div>
           <div class="lish-details">
             <div class="header_wrap">
             </div>
